<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator_placeholder">CALCULATOR</string>
    <string name="sum_operator">+</string>
    <string name="sub_operator">-</string>
    <string name="div_operator">/</string>
    <string name="mul_operator">*</string>
    <string name="equals">=</string>
    <string name="n_one">1</string>
    <string name="n_two">2</string>
    <string name="n_three">3</string>
    <string name="n_four">4</string>
    <string name="n_five">5</string>
    <string name="n_six">6</string>
    <string name="n_seven">7</string>
    <string name="n_eight">8</string>
    <string name="n_nine">9</string>
    <string name="n_zero">0</string>


</resources>
